--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "at.metalab.meks.metapp"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,9 @@ dependencies {
     compile 'org.jetbrains.anko:anko-sdk19:0.8.2'
 
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.dmitrymalkovich.android:progress-fab:1.6'
 
 }
 repositories {
