--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
 
+    compile 'com.google.code.gson:gson:2.4'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.jetbrains.anko:anko-sdk19:0.8.2'
 
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
 
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.dmitrymalkovich.android:progress-fab:1.6'
+    compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
 
 }
 repositories {
