--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,19 +33,20 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
 
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
+    compile 'com.google.apis:google-api-services-oauth2:v1-rev121-1.22.0'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.jetbrains.anko:anko-sdk19:0.8.2'
 
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
 
+    compile 'com.androidadvance:topsnackbar:1.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
     compile 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
     compile 'me.zhanghai.android.materialprogressbar:library:1.1.7'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
-    compile 'com.google.apis:google-api-services-oauth2:v1-rev121-1.22.0'
 }
 repositories {
     mavenCentral()
