--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,16 @@
         <activity
             android:name=".screeninvader.ScreenInvaderActivtiy"
             android:label="@string/title_screeninvader">
+        </activity>
+
+        <activity
+            android:name=".screeninvader.InvadeShareMenu"
+            android:label="@string/app_name">
+            <intent-filter>
+                <data android:mimeType="text/*"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.SEND"/>
+            </intent-filter>
         </activity>
 
         <activity
